--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
             steps {
                 checkout([
                  $class: 'GitSCM',
-                 branches: [[name: 'master']],
+                 branches: [[name: 'main']],
                  userRemoteConfigs: [[
                     url: 'https://github.com/devopseng129/DevOpsClassCodes.git',
                     credentialsId: '',
